Posters now visible

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: sans-serif;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -14,13 +13,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -31,28 +25,61 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+h1,
+h2,
+p {
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
-button:hover {
-  border-color: #646cff;
+
+h1 {
+  font-size: 1.5em;
+  margin-bottom: 0.5rem;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-bottom: 3rem;
+}
+
+hr {
+  width: 3em;
+  height: 3px;
+  border: 0;
+  background-color: rgba(255, 255, 255, 0.87);
+  margin-left: 0;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.small {
+  font-size: 0.8em;
+}
+
+.larger {
+  font-size: 2em;
+}
+
+.movie-poster {
+  width: 150px;
+  height: 250px;
+  margin: 0.5rem;
+  object-fit: cover;
 }
 
 @media (prefers-color-scheme: light) {
@@ -60,10 +87,8 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  hr {
+    background-color: #213547;
   }
 }
