--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ ol {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 3rem;
+  margin: 3rem 0;
 }
 
 hr {
