Remove margin styling

--- a/src/index.css
+++ b/src/index.css
@@ -32,26 +32,13 @@ main {
   padding: 0;
 }
 
-h1,
-h2,
-p {
-  font-weight: normal;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  font-size: 1.5em;
-  margin-bottom: 0.5rem;
-}
-
 ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin: 3rem 0;
 }
 
@@ -83,6 +70,10 @@ hr {
   max-width: 800px;
 }
 
+.movie-info {
+  padding-left: 1em;
+}
+
 .movie-poster {
   width: 150px;
   height: 250px;
@@ -97,9 +88,10 @@ hr {
 }
 
 .movie-poster-big {
-  width: 300px;
-  height: 500px;
+  width: 250px;
+  height: 375px;
   object-fit: cover;
+  display: block;
 }
 
 @media (prefers-color-scheme: light) {
