Flesh out FIgma

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,9 +1,47 @@
 #root {
-  max-width: 1440px;
+  width: 1440px;
   margin: 10rem;
-  padding: 2rem;
+  padding: 24px 165px 77px;
   box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  background-color: #f9f7e8;
-  border: 1px solid #f3f3f3;
+  background-color: var(--white);
+  border: 1px solid var(--white);
+}
+
+p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+header h1 {
+  font-size: 26px;
+  text-transform: lowercase;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+header a {
+  color: inherit;
+  text-decoration: none;
+}
+
+header nav ul {
+  display: flex;
+  list-style: none;
+}
+
+header nav ul li {
+  margin-left: 24px;
+}
+
+header nav ul li a {
+  font-weight: 400;
 }
