--- a/src/assets/css/MoviePage.css
+++ b/src/assets/css/MoviePage.css
@@ -79,3 +79,11 @@
   align-items: center;
   margin-right: 24px;
 }
+
+.movie-info-credits-crew ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+}
