--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,8 +1,8 @@
 #root {
-  /* min-width: 1024px; */
-  width: 1440px;
+  min-width: 1024px;
+  max-width: 1440px;
   margin: 2rem auto;
-  padding: 24px 165px 77px;
+  /* padding: 0 165px; */
   /* box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1); */
   /* border-radius: 10px; */
   /* background-color: var(--white); */
@@ -46,7 +46,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 48px;
+  margin: 4em 0 6em;
 }
 
 header a {
