--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -65,3 +65,12 @@ header nav ul li {
 header nav ul li a {
   font-weight: 400;
 }
+
+.truncate {
+  display: block;
+  width: 100%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
