--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,7 @@
 #root {
   min-width: 1024px;
   max-width: 1440px;
-  margin: 2rem auto;
+  margin: 2rem auto 12rem;
   /* padding: 0 165px; */
   /* box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1); */
   /* border-radius: 10px; */
@@ -59,11 +59,19 @@ header nav ul {
 }
 
 header nav ul li {
-  margin-left: 24px;
+  margin-left: 48px;
 }
 
 header nav ul li a {
   font-weight: 400;
+  display: block;
+  margin-top: 4px;
+  padding-bottom: 4px;
+}
+
+header nav ul li a.active {
+  font-weight: 600;
+  border-bottom: 2px solid var(--teal);
 }
 
 .truncate {
