--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,12 +1,7 @@
 #root {
-  min-width: 1024px;
   max-width: 1440px;
   margin: 2rem auto 12rem;
-  /* padding: 0 165px; */
-  /* box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1); */
-  /* border-radius: 10px; */
-  /* background-color: var(--white); */
-  /* border: 1px solid var(--white); */
+  padding: 0 2rem;
 }
 
 ul {
@@ -81,4 +76,15 @@ header nav ul li a.active {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+@media (max-width: 768px) {
+  #root {
+    padding: 0 1rem;
+    margin: 1rem auto 6rem;
+  }
+
+  header {
+    margin: 2em 0 4em;
+  }
 }
