--- a/src/assets/css/StartPage.css
+++ b/src/assets/css/StartPage.css
@@ -1,5 +1,5 @@
 #start-page h2 {
-  font-size: 48px;
+  /* font-size: 48px; */
 }
 
 .movies-now-playing {
@@ -36,6 +36,10 @@
 }
 
 @media (max-width: 768px) {
+  #start-page h2 {
+    font-size: 48px;
+  }
+
   .movies-now-playing {
     flex-wrap: wrap;
   }
