--- a/src/assets/css/StartPage.css
+++ b/src/assets/css/StartPage.css
@@ -39,7 +39,7 @@
 
 .movie-now-playing img:hover {
   filter: none;
-  transform: scale(1.025);
+  /* transform: scale(1.025); */
 }
 
 @media (max-width: 768px) {
