--- a/src/assets/css/StartPage.css
+++ b/src/assets/css/StartPage.css
@@ -33,12 +33,12 @@
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.6);
-  filter: brightness(75%) opacity(0.95);
-  transition: filter 400ms ease-in-out, transform 200ms ease-in-out;
+  filter: brightness(85%) opacity(0.95) saturate(1) contrast(1.1);
+  transition: filter 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
 .movie-now-playing img:hover {
-  filter: none;
+  filter: brightness(100%) opacity(1) saturate(1.25) contrast(1);
   /* transform: scale(1.025); */
 }
 
