--- a/src/assets/css/StartPage.css
+++ b/src/assets/css/StartPage.css
@@ -2,7 +2,7 @@
   /* font-size: 48px; */
 }
 
-.movies-now-playing {
+.movies-list {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -12,12 +12,17 @@
   /* flex-wrap: wrap; */
 }
 
-.movie-now-playing {
+.movie-now-playing.movie {
   flex: 1 0 25%;
   padding: 0 8px;
 }
 
-.movie-now-playing a {
+.movie-upcoming.movie {
+  flex: 1 0 20%;
+  padding: 0 8px;
+}
+
+.movie a {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -26,7 +31,7 @@
   color: inherit;
 }
 
-.movie-now-playing img {
+.movie img {
   display: block;
   width: 100%;
   height: 100%;
@@ -37,7 +42,7 @@
   transition: filter 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
-.movie-now-playing img:hover {
+.movie img:hover {
   filter: brightness(100%) opacity(1) saturate(1.25) contrast(1);
   /* transform: scale(1.025); */
 }
@@ -47,16 +52,16 @@
     font-size: 48px;
   }
 
-  .movies-now-playing {
+  .movies-list {
     flex-wrap: wrap;
   }
 
-  .movie-now-playing {
+  .movie {
     flex: 1 1 50%;
     margin: 0 0 16px 0;
   }
 
-  .movie-now-playing img {
+  .movie img {
     filter: none;
     border-radius: 4px;
   }
