--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,6 +10,7 @@
   --gray: #f3f3f3;
   --green: #17c47c;
   --teal: #61bfad;
+  --teal-darker: #4e9e92;
   --red: #e54b4b;
 
   color-scheme: light dark;
