--- a/src/assets/css/StartPage.css
+++ b/src/assets/css/StartPage.css
@@ -2,6 +2,28 @@
   /* font-size: 48px; */
 }
 
+.start-page-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 1em 0 6em;
+}
+
+.start-page-nav li {
+  margin-right: 16px;
+}
+
+.start-page-nav li:last-child {
+  margin-right: 0;
+}
+
+.start-page-nav a {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
 .movies-list {
   display: flex;
   flex-direction: row;
@@ -64,5 +86,12 @@
   .movie img {
     filter: none;
     border-radius: 4px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .start-page-nav a {
+    /* background-color: rgba(0, 0, 0, 0.6); */
+    /* box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.6); */
   }
 }
