--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -86,6 +86,14 @@ header nav ul li a.active {
   -ms-animation: fadeIn ease 250ms;
 }
 
+.app-page {
+  margin: 6em 0 0;
+}
+
+.italic {
+  font-style: italic;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
