--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -17,7 +17,7 @@
   color: var(--black);
   background-color: var(--white);
 
-  font-synthesis: none;
+  /* font-synthesis: none; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
